# zktls-bench

./: .gitignore  .gitmodules  README.md
.github/workflows/: arm.yml  x86.yml
bench/: CMakeLists.txt
bench/include/: helper.h
bench/mpc_tls/: CMakeLists.txt  prot_on_off.cpp  protocol.cpp
bench/network/: pado_io_channel.h  proxy_client.h  sha1.cpp  sha1.h  websocket_io_channel.cpp  ws.cpp  ws.h
bench/network/common/: runtime_error.h  toolkit.cpp  toolkit.h
bench/proxy_tls/: CMakeLists.txt  prove_proxy_tls.cpp
bench/zk_tls/: CMakeLists.txt  bench.cpp  bench.h  prot_on_off.cpp  protocol.cpp  prove_proxy_tls.cpp
bench_data/: README.md  origo-arm.csv  origo-wasm-one-machine.csv  origo-wasm.csv  origo-x86.csv  otls-arm-3_1Ghz.csv  otls-arm-mpc-on-off.csv  otls-arm-mpc.csv  otls-arm-proxy.csv  otls-wasm-mpc-on-off.csv  otls-wasm-mpc.csv  otls-wasm-proxy.csv  otls-wasm_3_1Ghz.csv  otls-x86-2_2Ghz.csv  otls-x86-3_1Ghz.csv  otls-x86-mpc-on-off.csv  otls-x86-mpc.csv  otls-x86-proxy.csv  otls-x86.csv  reclaim-arm-3_1Ghz-tls12.csv  reclaim-arm-3_1Ghz-tls13.csv  reclaim-arm-3_1Ghz.csv  reclaim-arm-tls1.2.csv  reclaim-arm-tls1.3.csv  reclaim-wasm-3_1Ghz-tls12.csv  reclaim-wasm-3_1Ghz-tls13.csv  reclaim-wasm-3_1Ghz.csv  reclaim-wasm-tls1.2.csv  reclaim-wasm-tls1.3.csv  reclaim-x86-3_1Ghz-tls12.csv  reclaim-x86-3_1Ghz-tls13.csv  reclaim-x86-3_1Ghz.csv  reclaim-x86-tls1.2.csv  reclaim-x86-tls1.3.csv  tlsn-arm-defer_decryption.csv  tlsn-arm.csv  tlsn-arm_3_1Ghz.csv  tlsn-qs-arm-defer_decryption.csv  tlsn-qs-arm.csv  tlsn-qs-x86-defer_decryption.csv  (+10 more)
browser/html/: bench.html  index.html
browser/wasm/: bench.js
config/: config
origo/: README.md  bench.sh  build_native_arm.sh  build_native_x86.sh  build_wasm_x86.sh  client.origo_tcp_local.json  http_server.sh  https_server.py  install_deps.sh  mock_server.sh  notary_server.sh  origo-memory.patch  origo.patch  patch_code.sh
origo/client_wasm/: bench.js
origo/fixture/: client.origo_0_1024.json  client.origo_0_16.json  client.origo_0_2048.json  client.origo_0_256.json  client.origo_1024_1024.json  client.origo_1024_16.json  client.origo_1024_2048.json  client.origo_1024_256.json  client.origo_2048_1024.json  client.origo_2048_16.json  client.origo_2048_2048.json  client.origo_2048_256.json  notary-config.toml
primus/: INSTALL_CHROME.md  README.md
primus/bench/: CMakeLists.txt
primus/bench/network/: CMakeLists.txt  emp_io_channel.cpp  emp_io_channel.h  io_manager.cpp  network.h  proxy_client.cpp  websocket_io_channel.h  ws.h
primus/bench/network/common/: macro.h  runtime_error.cpp  smart_pointer.h  version.cpp  version.h
primus/bench/zk_tls/: .clang-format  CMakeLists.txt  bench.cpp  bench.h  prot_on_off.cpp  protocol.cpp  prove_proxy_tls.cpp
primus/browser/html/: .gitignore
primus/browser/wasm/: package.json
primus/config/: config
primus/scripts/: _config.sh  bench.sh  clean.sh  start_http_server.sh  x_compile.sh
primus/scripts/internal/: 10-main.conf.patch  apply_patch.sh  compile_bench.sh  compile_emp.sh  compile_emp_wasm.sh  compile_openssl_wasm.sh  compile_otls.sh  compile_otls_wasm.sh  revert_patch.sh
reclaim/: .env.development  .gitignore  README.md  bench.js  bench.sh  build-browser.sh  cert.pem  https_server.py  key.pem  package.json  patch-arm.csv  patch-native.csv  patch-wasm.csv  patch.csv  patch.sh  webpack.config.js
reclaim/browser/: index.html
reclaim/patched/: native-tls1.2.csv  native-tls1.3.csv  wasm-tls1.2.csv  wasm-tls1.3.csv
reclaim/src/: comm.ts  index.ts  mock-provider-server.ts  start_attestor.ts  start_prover.ts  start_provider.ts
scripts/: _config.sh  bench.sh  check.sh  reset_network.sh  simulate_network.sh  x_compile.sh
scripts/internal/: compile_bench.sh  compile_bench_wasm.sh  compile_emp.sh  compile_openssl.sh
scripts/tlsn/: bench.sh  build_wasm.sh  reset_network.sh  simulate_network.sh
tlsn/: .gitignore  README.md  bench.sh  bench.toml  build_arm.sh  build_native_arm.sh  build_native_x86.sh  build_wasm_x86.sh  patch_code.sh  tlsn.patch
